--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.2",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
+    "date-fns": "^2.23.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3"
