--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -10,8 +10,10 @@
     "test": "react-scripts test"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.3.10",
     "axios": "^0.21.1",
     "date-fns": "^2.23.0",
     "react": "^17.0.2",
